--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <input type="number" id="chave" value="1" max="26" />
             </fieldset>
   
-            <fieldset class="codeRadio">
+            <fieldset style="border:none;" class="codeRadio">
               <div class="divR">
                   <input type="radio" name="code" class="radio" id="code" />
                   <label for="codificar">Codificar</label>
@@ -41,7 +41,7 @@
               </div>
             </fieldset>
   
-            <fieldset>
+            <fieldset style="border:none;">
               <label for="resultado">Result</label>
                   <textarea name="resultado" id="resultado" readonly></textarea>
             </fieldset>
