--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <option value="cesar">Cifra de Cesar</option>
             </select>
   
-            <fieldset class="keyDiv">
+            <fieldset style="border:none;" class="keyDiv">
                 <label for="chave">Incremento 1-25</label>
                 <input type="number" id="chave" value="1" max="26" />
             </fieldset>
