--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- --------------------------------------------------- CONTEUDO -------------------------------------------  -->
 <div class="main">
-    <h1>CIFRA DE CÓDIGO</h1>
+    <h1>CIFRA DE CÉSAR</h1>
         <form>
             <label for="mensagem">Mensagem</label>
                 <textarea id="mensagem"></textarea>
